@@ -8,7 +8,7 @@ App::Tailor - easily tailor terminal output to meet your needs
 
 =head1 VERSION
 
-version 0.01
+version 0.02
 
 =head1 SYNOPSIS
 
