@@ -1,4 +1,5 @@
 {{$NEXT}}
+-Handle back-references and named captures in string-replacements to modify()
 
 0.01 2020-04-13
 -Initial release
